<resources>
    <string name="app_name">CekPKB</string>
    <string name="txt_take_picture">Foto Plat</string>
    <string name="txt_search_pkb">Cari PKB</string>
    <string name="xpath_value">//table[contains(@class,\'table-bordered\')]//td[normalize-space()=\'%s\']/following-sibling::td</string>
    <string name="instructions_label">Petunjuk penggunaan aplikasi</string>
    <string name="txt_placeholder_nopol">[Nomor Polisi]</string>
    <string name="txt_confirmation">Jika nomor polisi berikut sudah sesuai, silakan tekan tombol \'Cari PKB\'</string>
    <string name="txt_vehicle_tax_info">Informasi Pajak Kendaraan</string>
    <string name="txt_total_payment">Jumlah yang harus dibayarkan</string>
    <string name="txt_due_date">Sebelum tanggal</string>
    <string name="txt_merek">Merek</string>
    <string name="txt_model">Model</string>
    <string name="txt_tahun">Tahun</string>
    <string name="txt_pkb_pokok">PKB Pokok</string>
    <string name="txt_pkb_denda">PKB Denda</string>
    <string name="txt_pkb">Total PKB</string>
    <string name="txt_swdkllj_pokok">SWDKLLJ Pokok</string>
    <string name="txt_swdkllj_denda">SWDKLLJ Denda</string>
    <string name="txt_swdkllj">Total SWDKLLJ</string>
    <string name="txt_detected_nopol">%s %s %s</string>
    <string name="currency_template">Rp%s</string>
    <string name="txt_not_found_response">Data kendaraan tidak ditemukan</string>
    <string name="txt_undetected_nopol">Nomor polisi tidak terdeteksi</string>
    <string name="txt_nopol_must_ab">Nomor polisi tidak terdeteksi</string>
</resources>